# deck

./: .gitignore  authentication.py  cli.py  deck.py  despair.py  emitter.py  entity_helpers.py  game_icons.py  generator.py  image4io.py  imgur.py  json_entity  layout.py  main.py  mancer.py  mancer_tts.py  pdf.py  pyproject.toml  random_generation.py  rect.py  requirements.txt  scratch.py  sheets.py  svg.py  svglue.py  svglue2.py  tts.py  util.py
deck_barcrawl/: __init__.py
deck_despair/: __init__.py
design/: __init__.py
despair/: .__init__.py.swp  .cards.svg.swp  .spell.svg.swp  __init__.py
