[project]
name = "deck"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cairosvg>=2.7.1",
    "click>=8.1.7",
    "click-web>=0.8.6",
    "cytoolz>=1.0.0",
    "diskcache>=5.6.3",
    "google-api-python-client>=2.149.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.1",
    "gspread>=6.1.3",
    "lxml>=5.3.0",
    "pillow>=11.0.0",
    "pypdf2>=3.0.1",
    "requests>=2.32.3",
    "svglib>=1.5.1",
    "uwsgi>=2.0.27",
    "svgpathtools>=1.6.1",
]
